# geogapfiller

./: README.md  environment.yml  pyproject.toml
data/20230602/: 20230602_S30_T15SWD_NIR.tif
data/20230617/: 20230617_S30_T15SWD_NIR.tif
data/20230622/: 20230622_S30_T15SWD_NIR.tif
data/20230712/: 20230712_L30_T15SWD_NIR.tif
data/20230725/: 20230725_S30_T15SWD_NIR.tif
data/20230728/: 20230728_L30_T15SWD_NIR.tif
data/20230814/: 20230814_S30_T15SWD_NIR.tif
data/20230816/: 20230816_S30_T15SWD_NIR.tif
data/20230831/: 20230831_S30_T15SWD_NIR.tif
data/20230903/: 20230903_S30_T15SWD_NIR.tif
data/20230914/: 20230914_L30_T15SWD_NIR.tif
data/20230918/: 20230918_S30_T15SWD_NIR.tif
data/20230930/: 20230930_S30_T15SWD_NIR.tif
data/example_images/20230602/: 20230602_L30_T15SWD_B02.tif  20230602_L30_T15SWD_B03.tif  20230602_L30_T15SWD_B04.tif  20230602_L30_T15SWD_NIR.tif  20230602_S30_T15SWD_B02.tif  20230602_S30_T15SWD_B03.tif  20230602_S30_T15SWD_B04.tif
data/example_images/20230612/: 20230612_S30_T15SWD_B02.tif  20230612_S30_T15SWD_B03.tif  20230612_S30_T15SWD_B04.tif  20230612_S30_T15SWD_NIR.tif
data/example_images/20230617/: 20230617_S30_T15SWD_B02.tif  20230617_S30_T15SWD_B03.tif  20230617_S30_T15SWD_B04.tif
data/example_images/20230622/: 20230622_S30_T15SWD_B02.tif  20230622_S30_T15SWD_B03.tif  20230622_S30_T15SWD_B04.tif
data_processed/median_predicted/: 20230602_NIR.tif  20230606_NIR.tif  20230608_NIR.tif  20230611_NIR.tif  20230612_NIR.tif  20230617_NIR.tif  20230619_NIR.tif  20230622_NIR.tif  20230625_NIR.tif  20230627_NIR.tif  20230702_NIR.tif  20230707_NIR.tif  20230720_NIR.tif  20230725_NIR.tif  20230728_NIR.tif  20230806_NIR.tif  20230814_NIR.tif  20230816_NIR.tif  20230824_NIR.tif  20230831_NIR.tif  20230903_NIR.tif  20230910_NIR.tif  20230914_NIR.tif  20230917_NIR.tif  20230918_NIR.tif  20230928_NIR.tif  20230930_NIR.tif
notebooks/: geogapfiler.ipynb
src/geogapfiller/: gapfiller.py  imgpredictor.py  utils.py
(+95 files in other folders)
